--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="container">
         <header>
             <img src="images/logo.png" alt="Logo Coding Week">
+            <p>Di Adamo</p>
         </header>
 
         <main>
